--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
     "core-js": "^2.6.5",
     "postcss-each": "^0.10.0",
     "qs": "^6.9.4",
-    "solid-auth-client": "^2.5.0",
-    "tailwindcss": "^1.6.2",
-    "vue": "^2.6.10",
-    "vue-router": "^3.3.4",
+    "rdf-js": "^1.0.2",
+    "rdflib": "^1.3.1",
+    "solid-acl-parser": "^0.2.1",
+    "solid-acl-utils": "github:otto-aa/solid-acl-utils",
+    "solid-auth-cli": "^1.0.15",
+    "solid-auth-client": "^2.5.1",
+    "tailwindcss": "^1.8.10",
+    "vue": "^2.6.12",
+    "vue-router": "^3.4.3",
     "vuex": "^3.5.1"
   },
   "devDependencies": {
@@ -30,6 +35,6 @@
     "babel-jest": "^23.6.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.12"
   }
 }
