--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "hex-rgb": "^4.2.0",
     "postcss-each": "^0.10.0",
     "qs": "^6.9.4",
     "rdf-js": "^1.0.2",
@@ -21,7 +22,7 @@
     "tailwindcss": "^1.9.4",
     "vue": "^2.6.12",
     "vue-inline-svg": "^2.0.0",
-    "vue-router": "^3.4.7",
+    "vue-router": "^3.4.9",
     "vue-template-compiler": "^2.6.12",
     "vuex": "^3.5.1"
   },
