--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "core-js": "^2.6.5",
     "hex-rgb": "^4.2.0",
+    "jsonld": "^5.0.0",
     "postcss-each": "^0.10.0",
     "qs": "^6.9.4",
     "rdf-js": "^1.0.2",
