Added ibex-lib from npm
The ibex library is now included from a npm module instead of relying on a local copy.

--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^2.6.5",
+    "core-js": "^3.6.5",
     "hex-rgb": "^4.2.0",
+    "ibex-lib": "^1.0.1",
     "postcss-each": "^0.10.0",
     "qs": "^6.9.4",
     "rdf-js": "^1.0.2",
@@ -28,7 +29,7 @@
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^2.3.0",
-    "@vue/cli-plugin-babel": "^3.12.0",
+    "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "^3.12.0",
     "@vue/cli-plugin-unit-jest": "^3.12.0",
     "@vue/cli-service": "^3.12.0",
@@ -36,6 +37,7 @@
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0"
   }
